--- a/templates/addbook.html
+++ b/templates/addbook.html
@@ -19,11 +19,8 @@
       <label for="exampleFormControlSelect1">Course</label>
       <select class="form-control" name="course" id="exampleFormControlSelect1">
         <option value="btech">B.Tech</option>
-        <option value="bsc">B.Sc</option>
         <option value="bba">BBA</option>
-        <option value="ba">BA</option>
         <option value="bl">B.Law</option>
-        <option value="mbbs">MBBS</option>
       </select>
     </div>
     <div class="form-group">
@@ -36,6 +33,13 @@
           <option value="civil">Civil</option>
           <option value="chem">Chemical</option>
           <option value="biotech">Bio Tech</option>
+          <option value="marketing">Marketing</option>
+          <option value="finance">Finance</option>
+          <option value="hr">HR</option>
+          <option value="itanalytics">IT & Analytics</option>
+          <option value="operations">Operations</option>
+          <option value="consulting">Consulting</option>
+          <option value="schooloflaw">School of Law</option>
         </select>
       </div>
     <div class="form-group">
