--- a/templates/index.html
+++ b/templates/index.html
@@ -65,57 +65,57 @@
     </section>
 
     <div class="row my-5 py-5">
-      <div class="col-md-2 text-center">
+      <div class="col-md-2 col-6 text-center">
         <a class="cat" href="category/Engineering/">
           <div class="catagories">
             <img class="mw-100" src="{% static 'img/engineering.svg' %}" alt=""><br>
           </div>
-          <div class="shadow p-2 mx-3 rounded tile">
+          <div class="shadow p-2 mx-md-3 rounded tile mx-auto mx-auto">
             Engineering
           </div>
         </a>
       </div>
-      <div class="col-md-2 text-center">
+      <div class="col-md-2 col-6 text-center">
         <a class="cat" href="category/Management/">
         <div class="catagories">
           <img class="mw-100" src="{% static 'img/management.svg' %}" alt="">
         </div>
-        <p class="shadow p-2 mx-3 bg-white rounded tile">
+        <p class="shadow p-2 mx-md-3 bg-white rounded tile mx-auto mx-auto">
           Management
         </p>
         </a>
       </div>
-      <div class="col-md-2 text-center">
+      <div class="col-md-2 col-6 text-center">
         <a class="cat" href="category/Law/">
         <div class="catagories">
           <img class="mw-100" src="{% static 'img/law.svg' %}" alt="">
         </div>
-        <p class="shadow p-2 mx-3 bg-white rounded tile">
+        <p class="shadow p-2 mx-md-3 bg-white rounded tile mx-auto mx-auto">
           Law
         </p>
         </a>
       </div>
-      <div class="col-md-2 text-center">
+      <div class="col-md-2 col-6 text-center">
         <a class="cat" href="category/Humanities/">
         <div class="catagories">
           <img class="mw-100" src="{% static 'img/human.svg' %}" alt="">
         </div>
-        <p class="shadow p-2 mx-3 bg-white rounded tile">
+        <p class="shadow p-2 mx-md-3 bg-white rounded tile mx-auto mx-auto">
           Humanities
         </p>
         </a>
       </div>
-      <div class="col-md-2 text-center">
+      <div class="col-md-2 col-6 text-center">
         <a class="cat" href="category/Commerce/">
         <div class="catagories">
           <img class="mw-100" src="{% static 'img/commerce.svg' %}" alt="">
         </div>
-        <p class="shadow p-2 mx-3 bg-white rounded tile">
+        <p class="shadow p-2 mx-md-3 bg-white rounded tile mx-auto mx-auto">
           Commerce
         </p>
         </a>
       </div>
-      <div class="col-md-2 text-center">
+      <div class="col-md-2 col-6 text-center">
         <div class="more">
           <img class="mw-100" src="{% static 'img/more.svg' %}" alt="">
           <p class="">
@@ -128,7 +128,7 @@
       <h1 class="heading">Courses & Certifications</h1><p class="float-right"><a class="link" href="{% url 'courses' %}">View More</a></p><br>
       <br>
       <div class="row">
-        <div class="col-md-3">
+        <div class="col-md-3 my-3 my-md-0">
           <div class="card card-prop m-0"   >
             <img src="{% static 'img/course.svg' %}" class="card-img-top" alt="">
             <div class="card-body">
@@ -140,7 +140,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 my-3 my-md-0">
           <div class="card card-prop m-0"   >
             <img src="{% static 'img/course.svg' %}" class="card-img-top" alt="">
             <div class="card-body">
@@ -152,7 +152,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 my-3 my-md-0">
           <div class="card card-prop m-0"   >
             <img src="{% static 'img/course.svg' %}" class="card-img-top" alt="">
             <div class="card-body">
@@ -164,7 +164,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 my-3 my-md-0">
           <div class="card card-prop m-0"   >
             <img src="{% static 'img/course.svg' %}" class="card-img-top" alt="">
             <div class="card-body">
@@ -178,7 +178,7 @@
         </div>
       </div>
 <br>
-      <div class="row">
+      <div class="row d-none d-md-flex">
         <div class="col-md-3">
           <div class="card card-prop m-0"   >
             <img src="{% static 'img/course.svg' %}" class="card-img-top" alt="">
@@ -233,24 +233,24 @@
       <h1 class="heading">Top Books</h1><p class="float-right"><a class="link" href="{% url 'books' %}">View More</a></p><br>
       <br>
       <div class="row">
-        <div class="col-md-3">
+        <div class="col-md-3 my-3 my-md-0">
           <div class="card card-prop m-0"   >
             <img src="{% static 'img/books.svg' %}" class="card-img-top" alt="">
             
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 my-3 my-md-0">
           <div class="card card-prop m-0"   >
             <img src="{% static 'img/books.svg' %}" class="card-img-top" alt="">
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 my-3 my-md-0">
           <div class="card card-prop m-0"   >
             <img src="{% static 'img/books.svg' %}" class="card-img-top" alt="">
             
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 my-3 my-md-0">
           <div class="card card-prop m-0"   >
             <img src="{% static 'img/books.svg' %}" class="card-img-top" alt="">
             
@@ -258,7 +258,7 @@
         </div>
       </div>
 <br>
-      <div class="row">
+      <div class="row d-none d-md-flex">
         <div class="col-md-3">
           <div class="card card-prop m-0"   >
             <img src="{% static 'img/books.svg' %}" class="card-img-top" alt="">
@@ -292,19 +292,19 @@
         <img class="mw-100" src="{% static 'img/mockinterview.svg' %}" alt="">
       </div>
       <div class="col-md-6">
-        <div class="mx-5 mt-5">
-          <img class="mw-100 mb-2" src="{% static 'img/greentick.svg' %}" alt=""><div class="d-inline ml-5">Confidence Boosting</div>
+        <div class="mx-md-5 mt-md-5 mt-2 mx-4">
+          <img class="mw-100 mb-2" src="{% static 'img/greentick.svg' %}" alt=""><div class="d-inline ml-md-5 ml-2">Confidence Boosting</div>
         </div>
-        <div class="mx-5 mt-4">
-          <img class="mw-100 mb-2" src="{% static 'img/greentick.svg' %}" alt=""><div class="d-inline ml-5">In Depth Interview analysis</div>
+        <div class="mx-md-5 mt-md-5 mt-2 mx-4">
+          <img class="mw-100 mb-2" src="{% static 'img/greentick.svg' %}" alt=""><div class="d-inline ml-md-5 ml-2">In Depth Interview analysis</div>
         </div>
-        <div class="mx-5 mt-4">
-          <img class="mw-100 mb-2" src="{% static 'img/greentick.svg' %}" alt=""><div class="d-inline ml-5">Mastering questions from A to Z</div>
+        <div class="mx-md-5 mt-md-5 mt-2 mx-4">
+          <img class="mw-100 mb-2" src="{% static 'img/greentick.svg' %}" alt=""><div class="d-inline ml-md-5 ml-2">Mastering questions from A to Z</div>
         </div>
-        <div class="mx-5 mt-4">
-          <img class="mw-100 mb-2" src="{% static 'img/greentick.svg' %}" alt=""><div class="d-inline ml-5">Preparing you for the real world</div>
+        <div class="mx-md-5 mt-md-5 mt-2 mx-4">
+          <img class="mw-100 mb-2" src="{% static 'img/greentick.svg' %}" alt=""><div class="d-inline ml-md-5 ml-2">Preparing you for the real world</div>
         </div>
-        <div class="mx-5 mt-5">
+        <div class="mx-md-5 mt-md-5 mt-2 mx-4">
           <button class="w-100 p-2" style="background-color: #F0486A;color:white;border: 0;">
             Know More
           </button>
@@ -316,7 +316,7 @@
     <h1 class="heading">Top Pick Articles</h1><p class="float-right"><a class="link" href="{% url 'news' %}">View More</a></p><br>
     <br>
     <div class="row">
-      <div class="col-md-3">
+      <div class="col-md-3 my-3 my-md-0">
         <div class="card card-prop m-0"   >
           <img src="{% static 'img/course.svg' %}" class="card-img-top" alt="">
           <div class="card-body">
@@ -327,7 +327,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-3 my-3 my-md-0">
         <div class="card card-prop m-0"   >
           <img src="{% static 'img/course.svg' %}" class="card-img-top" alt="">
           <div class="card-body">
@@ -338,7 +338,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-3 my-3 my-md-0">
         <div class="card card-prop m-0"   >
           <img src="{% static 'img/course.svg' %}" class="card-img-top" alt="">
           <div class="card-body">
@@ -349,7 +349,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-3 my-3 my-md-0">
         <div class="card card-prop m-0"   >
           <img src="{% static 'img/course.svg' %}" class="card-img-top" alt="">
           <div class="card-body">
